--- a/app/views/items/_mainpageitemswithnames.html.erb
+++ b/app/views/items/_mainpageitemswithnames.html.erb
@@ -18,7 +18,7 @@
 <% end %>
 <% end %>
 
-<!--<table>
+<table>
 <% @items.each do |item| %>
 	<tr>
     <%= link_to item.name, item %> &nbsp
@@ -27,4 +27,3 @@
 	</tr>
 <% end %>
 </table>
--->
