--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -31,7 +31,7 @@ div#main_image img {
 		</div>
 
 		<div id="main_page_text_temporary">
-			<h2 style="display:inline">Recently Posted Items</h2> &nbsp (also looking for needs to be on this page)
+			<h2 style="display:inline">Recently Posted Items</h2>
 
 			<%= render "items/mainpageitemswithphotos" %>
         	<div style = "position:absolute; text-align:center; top:419px; left:400px">
