cleaned sqlite db

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -31,6 +31,13 @@
 
 <div class="span8">
 
+<div class="btn-group" data-toggle="buttons-radio" style="padding:10px">
+  <button type="button" class="btn">List</button>
+  <button type="button" class="btn">Pic</button>
+  <button type="button" class="btn">Grid</button>
+</div>
+
+
 <% count = 0 %>
 
 <br><!--Temp, will revamp everything-->
