--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,12 +1,12 @@
 <%= simple_form_for @item do |f| %>
-  <%= f.input :name, :input_html => {:value => "Sprite"} %>
-  
-  <%= f.input :price, :input_html => {:value => 10} %>
-  <%= f.input :tag_list, :as => :select, :collection => ["Book", "Dorm", "Tick"] %>
-  <%= f.input :house_list, :as => :select, :collection => ["Yard", "River", "Quad", "Other"] %>
+  <%= f.input :name %>
+  <%= f.input :price %>
+  <%= f.input :place, :collection => ["Yard", "River", "Quad", "Other"], :selected => @item.place %>
+  <%= f.input :tag_list, label: 'Tags (separated by commas)' %>
   <%= f.input :image %>
-  <%= f.input :remote_image_url, :input_html => {:value => "http://imagethumbnails.milo.com/024/878/166/trimmed/24878061_28584166_trimmed.jpg"} %>
-  <%= f.input :description, :input_html => {:rows => 5, :maxlength => 250, :value => "Using this as a default test item!!"} %>
+  <%= f.input :remote_image_url %>
+  <%= f.input :description %>
   <%= f.button :submit, :class => "btn btn-info" %>
 <% end %>
+
 
