--- a/app/assets/stylesheets/template3.css.scss
+++ b/app/assets/stylesheets/template3.css.scss
@@ -51,6 +51,19 @@ $linkColor: darken($linkColor, 10%);
 
 /* UNIVERSAL STYLES */
 
+#tag_cloud {
+  width: 400px;
+  line-height: 1.6em;
+  .s { font-size: 0.8em; }
+  .m { font-size: 1.2em; }
+  .l { font-size: 1.8em; }
+}
+
+#tag_cloud {
+  padding-left: 30px;
+  padding-top: 10px
+}
+
 .logo {
   float: left;
   margin-right: 10px;
