email mostly done

--- a/app/views/user_mailer/new_message.text.erb
+++ b/app/views/user_mailer/new_message.text.erb
@@ -1,6 +1,6 @@
 Hey
 
-Name: <%= @message.name %>
-Email: <%= @message.email %>
+Sender: <%= @user.name %>
+Address of sender: <%= @user.email %>
 Subject: <%= @message.subject %>
 Body: <%= @message.body %>
