--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,12 +1,18 @@
 <%= simple_form_for @item do |f| %>
-  <%= f.input :name %>
-  <%= f.input :price %>
-  <%= f.input :place, :collection => ["Yard", "River", "Quad", "Other"], :selected => @item.place %>
-  <%= f.input :tag_list, label: 'Tags (separated by commas)' %>
-  <%= f.input :image %>
-  <%= f.input :remote_image_url %>
-  <%= f.input :description %>
-  <%= f.button :submit, :class => "btn btn-info" %>
+  <div class="span4">
+  	<%= f.input :name %>
+  	<%= f.input :price %>
+  	<%= f.input :place, :collection => ["Yard", "River", "Quad", "Other"], :selected => @item.place %>
+  	<%= f.input :tag_list, label: 'Tags (separated by commas)' %>
+  </div>
+  <div class="span2">
+  	<%= f.input :image %>
+  	<%= f.input :remote_image_url, label: "or image url" %>
+  	<%= f.input :description, :input_html => {:rows => 5, :maxlength => 500} %>
+  	<%= f.button :submit, :class => "btn btn-info" %>
+  	<br><br><br>
+  	<%= link_to 'back to item', @item %>
+  </div>
 <% end %>
 
 
