--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,9 +2,9 @@
 </script> 
 <script>
 $(document).ready(function(){
-  $("#hide").click(function(){
-    $(this).hide();
-  });
+  // $("#hide").click(function(){
+  //   $(this).hide();
+  // });
   $("#btn_grid").click(function(){
     $("#grid_partial").toggle();
   });
@@ -66,8 +66,8 @@ $(document).ready(function(){
 
 <p id="hide">Hide me</p>
 
-<p id="grid_partial" style="padding-top:20px"><%= render "items/mainpageitems" %></p>
-
+<!-- <p id="grid_partial" style="padding-top:20px"><%= render "items/mainpageitems" %></p> -->
+<%= link_to "Grid/List", 'items/mainpageitems', id: "grid_partial", remote: true %>
 
 </div> <!-- closing div tag for 'span10' from above -->
 
