--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
 <br>
 
 <div class="row-fluid">
-  <div class="span2">
+  <div class="span2" style="margin-left: 15px">
 
     <% if @user.photo %>
       <div style="margin-bottom:50px">
@@ -42,7 +42,7 @@
 
   </div> <!-- End of div 2 for sidebar -->
 
-  <div class="span10">
+  <div class="span9">
 
   <% @i = 1 %>
 
