--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -8,7 +8,7 @@
   <div class="span2">
   	<%= f.input :image %>
   	<%= f.input :remote_image_url, label: "or image url" %>
-  	<%= f.input :description, :input_html => {:rows => 5, :maxlength => 500} %>
+  	<%= f.input :description, :input_html => {:rows => 5, :maxlength => 500}, :placeholder => "Description, Location, Price, Contact Info, etc." %>
   	<%= f.button :submit, :class => "btn btn-info" %>
   	<br><br><br>
   	<%= link_to 'back to item', @item %>
