--- a/app/views/items/index.js.erb
+++ b/app/views/items/index.js.erb
@@ -1,4 +1,4 @@
-$("#btn_grid").click(function(){
-	$("#grid_partial").toggle()
-    // $("#grid_partial").toggle().after('<%= j render("mainpageitemswithphotos") %>')
+$("#btn_toggle").click(function(){
+	$("#partial_toggle").toggle()
+   	$("#partial_toggle").toggle().after('<%= j render("mainpageitemswithphotos") %>')
   });
