--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,12 +7,12 @@ $(document).ready(function(){
   // });
   // <p id="hide">Hide me</p>
 
-$("#btn_grid").click(function(){
-$("#grid_partial").toggle()
+$("#btn_toggle").click(function(){
+$("#partial_toggle").toggle()
 });
   
 });
-</script>
+</script> 
 
 <%= set_title 'Search Results' %>
 
@@ -40,7 +40,7 @@ $("#grid_partial").toggle()
  <!--  <%= button_to 'Grid/List', items_path, :id => "btn_grid", :class => "btn", :method => :get %> -->
 
   <!-- , :remote => true -->
-<button type="button" id="btn_grid" class="btn">Grid/List</button>
+<button type="button" id="btn_toggle" class="btn">Grid/List</button>
 </div>
 
 <% count = 0 %>
@@ -73,7 +73,7 @@ $("#grid_partial").toggle()
 
 
 <!-- <p id="grid_partial" style="padding-top:20px"><%= render "items/mainpageitems" %></p> -->
-<%= link_to "Grid/List", 'items/mainpageitems', id: "grid_partial", remote: true %>
+<%= link_to "Grid/List", 'items/mainpageitems', id: "partial_toggle", remote: true %>
 
 </div> <!-- closing div tag for 'span10' from above -->
 
