--- a/app/views/user_mailer/new_message.text.erb
+++ b/app/views/user_mailer/new_message.text.erb
@@ -1,6 +1,12 @@
-Hey
+<%= @message.body %>
 
-Sender: <%= @user.name %>
-Address of sender: <%= @user.email %>
+Looks like it's working.
+
+Seller name: <%= @user.name %>
+Seller email: <%= @user.email %>
 Subject: <%= @message.subject %>
-Body: <%= @message.body %>
+Message body: <%= @message.body %>
+
+
+
+
