--- a/app/views/items/itemslist.html.erb
+++ b/app/views/items/itemslist.html.erb
@@ -27,8 +27,11 @@
     <td><%= s.name %></td>
     <td class="result_image"><%= image_tag(s.image_url) %></td>
     <td><%= s.description %></td>
+
+    <% if current_user.id == s.user_id %>
     <td><%= button_to 'Edit', edit_item_path(s), :class => "btn btn-small btn-info", :method => :get %> </td>
     <td><%= button_to 'Delete', {:controller => 'items', :action => 'destroy', :id => s.id}, :class => "btn btn-small btn-danger", :method => :delete %></td> <!--Take note!  The s.id is very deliberate.  It's the user id, not an html id. Think twice before tampering -->
+    <% end %>
   </tr>
 
   <% @i+=1 %>
