--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,8 +1,10 @@
-Contact us with questions, concerns, and comments at the field below:
+<!-- this is currently not in use right now -->
+
+<!-- Contact us with questions, concerns, and comments at the field below:
 </br></br>
 
-<%= form_tag({:controller => "/main", :action => "contact"}, :method => "get") do %>
+<%= form_tag({:controller => "main", :action => "contact"}, :method => "get") do %>
   <%= text_field_tag :contact, params[:contact], :size => 50 %>
   <%= submit_tag('Send') %>
-<% end %>
+<% end %> -->
 
