--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,11 +45,20 @@
     <div id="postModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-      <h3 id="myModalLabel">Sign In</h3>
+      <h3 id="myModalLabel">New</h3>
     </div>
     <div class="modal-body">
-      <%= render 'items/form' %>
-      <%= render 'items/form' %>
+        <%= simple_form_for @item, :url => url_for(:action => 'create', :controller => 'items'), :method => 'post' do |f| %>
+            <%= f.input :name %>
+            <%= f.input :price %>
+            <%= f.input :place, :collection => ["Yard", "River", "Quad", "Other"], :selected => @item.place %>
+            <%= f.input :tag_list, label: 'Tags (separated by commas)' %>
+            <%= f.input :image %>
+            <%= f.input :remote_image_url, label: "or image url" %>
+            <%= f.input :description, :input_html => {:rows => 5, :maxlength => 500}, :placeholder => "Description, Location, Price, Contact Info, etc." %>
+            <%= f.button :submit, :class => "btn btn-info" %>
+        <%= link_to 'back to item', @item %>
+          <% end %>
     </div>
     <div class="modal-footer">
       <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
@@ -75,7 +84,10 @@
 
 
         <ul class="nav pull-right">
-            <li><%= link_to "Post", new_item_path %></li>
+          <% if user_signed_in? %>
+            <li><a href="#postModal" data-toggle="modal">Post</a></li>
+          <% end %>
+
           <% if user_signed_in? %>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -109,11 +121,8 @@
       <div class="span12">
         <div id="footer_templatecss">
           <ul id="footer_list" class="nav nav-pills">
-            <li><%= link_to 'Users', '/users'%></li>
             <li><%= link_to 'Items', '/itemslist'%></li>
             <li><%= link_to 'About', '/about'%></li>
-            <li><%= link_to 'Items', '/items'%></li>
-            <li><%= link_to 'Home', '/home' %></li>
           </ul>
         </div>
       </div>
