--- a/app/views/items/_mainpageitemswithnames.html.erb
+++ b/app/views/items/_mainpageitemswithnames.html.erb
@@ -18,7 +18,7 @@
 	<% end %>
 <% end %>
 
-<table>
+<!-- <table>
 <% @items.each do |item| %>
 	<tr>
     	<%= link_to item.name, item %> &nbsp
@@ -26,4 +26,4 @@
 		<br>
 	</tr>
 <% end %>
-</table>
+</table> -->
