--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,6 +31,7 @@
         <% if @user.name %>
       <h4><%= @user.name %></h4 >
         <% end %>
+     
       <%= @user.email %><br>
       id: <%= @user.id %>
       </div>
@@ -45,7 +46,7 @@
 
   </div> <!-- End of div 2 for sidebar -->
 
-  <div class="span9">
+  <div class="span4">
 
   <% @i = 1 %>
 
@@ -80,6 +81,13 @@
   <% end %>
 
 </table>
-  </div>
+  </div> <!-- Span 5 -->
+
+<div class="span4">
+  uncomment the code here to see your facebook friend list!<br>
+  (and potentially what your friends might be selling)
+  Actually in scratchwork.txt now.
+
+</div>
 
 </div>  
