--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,16 +2,14 @@
 </script> 
 <script>
 $(document).ready(function(){
-  // $("#hide").click(function(){
-  //   $(this).hide();
-  // });
-  // <p id="hide">Hide me</p>
 
-$("#btn_toggle").click(function(){
-$("#partial_toggle").toggle()
+$(".alignment .btn").click(function() {
+  $("#alignment").val($(this).text());
+  $alignmentValue = $(this).text();
 });
-
-var active = $('.').val();
+// bruno said to use if statements to check for value
+// and render the right partials.
+// google mixing javascript and ruby code.
   
 });
 </script> 
@@ -38,19 +36,22 @@ var active = $('.').val();
 
 <div class="span8">
 
-<div class="btn-group" data-toggle="buttons-radio" style="padding:10px">
+<input type="text" id="alignment" value="" /><br>
+<div class="btn-group alignment" data-toggle="buttons-radio" style="padding:10px">
   <div class="btn-group" data-toggle="buttons-radio">
-    <button type="button" class="btn" value="0">List</button>
-    <button type="button" class="btn0" value="1">Pic</button>
-    <button type="button" class="btn" value="2">Grid</button>
+    <button type="button" class="btn">List</button>
+    <button type="button" class="btn">Pic</button>
+    <button type="button" class="btn">Grid</button>
   </div>  
 </div>
+
+<br> <input type="text" />
 
 <% count = 0 %>
 
 <br><!--Temp, will revamp everything-->
 
-<table>
+<!-- <table>
 
 <% @items.each do |item| %>
 	<% if count % 6 == 0 %> <tr class="tdspace_right space_above space_under"> <% end %>
@@ -71,12 +72,14 @@ var active = $('.').val();
 	<% count += 1 %>
 <% end %>
 
-</table>
+</table> -->
 
+<%= link_to "Partial please", items_path, :remote => true %>  
+<br><br>
 
+<div id = "div_id_to_render_partial">
 
-<!-- <p id="grid_partial" style="padding-top:20px"><%= render "items/mainpageitems" %></p> -->
-<%= link_to "Grid/List", 'items/mainpageitems', id: "partial_toggle", remote: true %>
+</div>
 
 </div> <!-- closing div tag for 'span10' from above -->
 
