--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,14 +2,6 @@
 </script> 
 <script>
 $(document).ready(function(){
-
-$(".alignment .btn").click(function() {
-  $("#alignment").val($(this).text());
-  $alignmentValue = $(this).text();
-});
-// bruno said to use if statements to check for value
-// and render the right partials.
-// google mixing javascript and ruby code.
   
 });
 </script> 
@@ -36,22 +28,15 @@ $(".alignment .btn").click(function() {
 
 <div class="span8">
 
-<input type="text" id="alignment" value="" /><br>
-<div class="btn-group alignment" data-toggle="buttons-radio" style="padding:10px">
-  <div class="btn-group" data-toggle="buttons-radio">
-    <button type="button" class="btn">List</button>
-    <button type="button" class="btn">Pic</button>
-    <button type="button" class="btn">Grid</button>
-  </div>  
-</div>
-
-<br> <input type="text" />
+<%= link_to "List", items_path(:filter => "list"), :method => :get, :remote => true %>
+<%= link_to "Pic", items_path(:filter => "pic"), :method => :get, :remote => true %>
+<%= link_to "Grid", items_path(:filter => "grid"), :method => :get, :remote => true %>  
 
 <% count = 0 %>
 
 <br><!--Temp, will revamp everything-->
 
-<!-- <table>
+<table>
 
 <% @items.each do |item| %>
 	<% if count % 6 == 0 %> <tr class="tdspace_right space_above space_under"> <% end %>
@@ -72,10 +57,7 @@ $(".alignment .btn").click(function() {
 	<% count += 1 %>
 <% end %>
 
-</table> -->
-
-<%= link_to "Partial please", items_path, :remote => true %>  
-<br><br>
+</table>
 
 <div id = "div_id_to_render_partial">
 
